--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
-
+	
 	<dependencies>
 
 		<dependency>
@@ -96,6 +96,12 @@
 			<version>1.16.16</version>
 		</dependency>
 		<!-- JSF -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
@@ -110,5 +116,15 @@
 			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+	<snapshotRepository>
+		 <id>nexus-snapshots</id>
+	 	 <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+		<repository>
+		 <id>nexus-releases</id>
+		 <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+		</repository>
+	</distributionManagement>
 
 </project>
