--- a/pom.xml
+++ b/pom.xml
@@ -109,11 +109,12 @@
 
 		<!-- https://mvnrepository.com/artifact/org.junit/junit-bom -->
 		<dependency>
-		    <groupId>org.junit</groupId>
-		    <artifactId>junit-bom</artifactId>
-		    <version>5.7.0</version>
-		    <type>pom</type>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
 		</dependency>
+		
 		
 
 	</dependencies>
