--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,19 @@
 		<version>2.2.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>tn.esprit.ali</groupId>
-	<artifactId>7bibi</artifactId>
+	<groupId>tn.esprit.spring</groupId>
+	<artifactId>raslen</artifactId>
 	<version>1.0</version>
-	<name>7bibi</name>
-	<description>7bibi</description>
+	<name>raslen</name>
+	<description>raslen</description>
+
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
+
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -36,11 +38,19 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.12</version>
-		<scope>test</scope>
-		</dependency>
+
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>4.12</version>
+<scope>test</scope>
+
+</dependency>
+<dependency>
+<groupId>log4j</groupId>
+<artifactId>log4j</artifactId>
+<version>1.2.17</version>
+</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -57,6 +67,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 		<!-- JSF -->
 		<dependency>
 			<groupId>org.apache.myfaces.core</groupId>
@@ -98,13 +109,9 @@
 			<version>1.16.16</version>
 		</dependency>
 		<!-- JSF -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+
 	</dependencies>
+
 
 
 	<build>
@@ -114,52 +121,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<artifactId>maven-clean-plugin</artifactId>
-				<version>3.1.0</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.2</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.5.2</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.7.1</version>
-				</plugin>
-				<plugin>
-				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>3.0.0</version>
-			</plugin>
+			
 		</plugins>
 	</build>
-	<distributionManagement>
-		<repository>
+<distributionManagement>
+	<snapshotRepository>
 		 <id>nexus-snapshots</id>
 	 	 <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
-		</repository>
-		<snapshotRepository>
+		</snapshotRepository>
+		<repository>
 		 <id>nexus-releases</id>
 		 <url>http://localhost:8081/nexus/content/repositories/releases/</url>
-		</snapshotRepository>
+		</repository>
 	</distributionManagement>
 </project>
