--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
-	<artifactId>timesheet</artifactId>
+	<artifactId>avan_exam</artifactId>
 	<version>1.0</version>
-	<name>timesheet</name>
-	<description>timesheet</description>
+	<name>avan_exam</name>
+	<description>avan_exam</description>
 
 	<properties>
 		<java.version>1.8</java.version>
