--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
 	<name>timesheet</name>
 	<description>timesheet</description>
 	<properties>
+		<sonar.projectKey>Timesheet-Ci-Project</sonar.projectKey>
+                <sonar.host.url>http://ip172-18-0-18-c1m9mbpbqvp0009gjdn0-9000.direct.labs.play-with-docker.com</sonar.host.url>
+                <sonar.login>3282e13ff13daf5023a5442731924262761d8756</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
